objects/ssot__AssetTelematicsEventFaultCdMapping__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetTelematicsEventId__c</fullName>
        <label>Asset Telematics Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultCodeId__c</fullName>
        <label>Fault Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultCodeSensorValuesText__c</fullName>
        <label>Fault Code Sensor Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultResolutionDate__c</fullName>
        <label>Fault Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FaultResolutionType__c</fullName>
        <label>Fault Resolution Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FreezeFrameId__c</fullName>
        <label>Freeze Frame Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Telematics Event Fault Code Map Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009171594_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetTelematicsEventFaultCdMapping_A_rel</label>
        <referenceTo>ssot__AssetTelematicsEvent__dlm</referenceTo>
        <relationshipLabel>AssetTelematicsEventFaultCdMapping_A_rel</relationshipLabel>
        <relationshipName>rel_1702009171594_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009171939_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetTelematicsEventFaultCdMapping_F_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>AssetTelematicsEventFaultCdMapping_F_rel</relationshipLabel>
        <relationshipName>rel_1702009171939_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>